...
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_main">Balance</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_app">About app</string>
    <string name="nav_history">Operations history</string>
    <string name="nav_scheduled_transactions">Scheduled</string>
    <string name="nav_templates">Templates</string>
    <string name="nav_statistics">Statistics</string>

    <string name="feedback">Feedback</string>

    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="build_statistics">Build graph</string>

    <string name="add_transaction">Add transaction</string>

    <string name="salary">Salary</string>
    <string name="shopping">Shopping</string>
    <string name="education">Education</string>

    <string name="balance">Balance</string>
    <string name="RUB">RUB</string>

...
