...
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/RUB"
        android:textColor="@color/yandex_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/main_quant_text"
        app:layout_constraintStart_toStartOf="@id/balance_tv"
        app:layout_constraintTop_toBottomOf="@id/balance_tv" />

    <TextView
        android:id="@+id/main_quant_text"
        android:layout_width="0dp"
...
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_transaction_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
...
