...
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/quantity_currency_spinner"
        app:layout_constraintStart_toStartOf="@id/operation_type_spinner"
        app:layout_constraintTop_toBottomOf="@+id/operation_type_spinner">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/quantity_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd" />
    </android.support.design.widget.TextInputLayout>
...
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/yandex_white"
        android:text="@string/cancel_button"
        android:textColor="@color/yandex_black"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/add_transaction_bt"
        app:layout_constraintStart_toStartOf="@id/operation_type_spinner"
        app:layout_constraintTop_toBottomOf="@+id/save_as_template" />

    <Button
        android:id="@+id/add_transaction_bt"
        android:layout_width="0dp"
...
