<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_schedule"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_scheduled_transactions"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_scheduled_transactions" />
        <item
            android:id="@+id/nav_templates"
            android:icon="@drawable/ic_template_black"
            android:title="@string/nav_templates" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_chart"
            android:title="@string/nav_statistics" />
    </group>

    <group
        android:id="@+id/other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>

</menu>