...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yandex_white"
    tools:context=".presentation.modules.settings.view.SettingsActivity">

    <include
        android:id="@+id/toolbar_settings_activity"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/apout_app_bt_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
